--- a/задание 1.1
+++ b/задание 1.1
@@ -37,7 +37,7 @@
   </section>
   <section>
    <div class="block">
-    <p><span class="first-character fl">Е</span>Если вы определились с направлением и целью ваших занятий, то хватит напрасно тратить время, ведь начать можно прямо сейчас. Для первого занятия йогой лучше всего сходить на специализированный урок.
+    <p><span class="first-character f2">Е</span>Если вы определились с направлением и целью ваших занятий, то хватит напрасно тратить время, ведь начать можно прямо сейчас. Для первого занятия йогой лучше всего сходить на специализированный урок.
 </p>
 	<p class="line-break margin-top-10"></p>
 	<p class="margin-top-10">А если вы решили по какой-либо причине заниматься дома, то это тоже не проблема. В интернете можно найти много книг и видеокурсов для начинающих, которые обязательно вам помогут. Всего 15-20 минут тренировок каждый день вызовут положительный эффект - вместо того, чтобы снижать свою гибкость, вы будете наоборот приводить свое тело в лучшее состояние. Очень скоро вы ощутите, что асаны выполняются все легче и легче, а через еще пару дней йога войдет в привычку, и станет частью вашей жизни.
@@ -52,7 +52,7 @@
   </section>
   <section>
    <div class="block">
-    <p><span class="first-character fl">Й</span>Йога – это целая наука о теле, душе и уме. Она включает в себя и дыхательные упражнения, и упражнения для медитации и релаксации. Самое главное - начать. Лучше всего приступать к занятиям постепенно, не нужно сразу выбирать самую сложную асану, ведь без опыта у вас ничего не получится. 
+    <p><span class="first-character f3">Й</span>Йога – это целая наука о теле, душе и уме. Она включает в себя и дыхательные упражнения, и упражнения для медитации и релаксации. Самое главное - начать. Лучше всего приступать к занятиям постепенно, не нужно сразу выбирать самую сложную асану, ведь без опыта у вас ничего не получится. 
 </p>
 	<p class="line-break margin-top-10"></p>
 	<p class="margin-top-10"> Когда вы уже немного познакомитесь с практикой йоги, можно будет выбрать конкретное направление. В нашей студии вы найдете направление, подходящее вам. Мы занимаемся проведением йоги уже 5 лет
