--- a/css 01.2
+++ b/css 01.2
@@ -4,7 +4,7 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   margin: 0;
-  background-color: white;
+  background-color: gree;
 }
 .box {
     width: 100%;
@@ -13,7 +13,7 @@ html, body {
   overflow: auto;
 }
 #main {
- width: 100%;
+ width: 150%;
  padding: 0;
 }
 .content-asset p {
